change configuration file

--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
 	"database":{
-		// "username":<username>,
-		// "password":<password>,
-		// "host":<hostname>,
-		// "port":<port>
+		"username":"<username>",
+		"password":"<password>",
+		"host":"<hostname>",
+		"port":"<port>"
 	},
 	"website":{
 		"title":"Bio Test"
