--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
 	"database":{
 		"username":"root",
-		"password":"123456",
+		"password":"12345678",
 		"hostname":"localhost",
 		"port":"3306",
 		"db_name":"bio_test"
