--- a/config.json.example
+++ b/config.json.example
@@ -8,7 +8,21 @@
 	},
 	"website":{
 		"title":"Bio Test",
-		"keywords":"biology"
+		"keywords":"biology",
+		"key":"Random_Key"
+	},
+	"email":{
+	    "MAIL_SERVER":"smtp.office365.com",
+	    "MAIL_PORT":"587",
+	    "MAIL_USERNAME":"example@hotmail.com",
+	    "MAIL_PASSWORD":"password",
+	    "MAIL_USE_TLS": true,
+	    "MAIL_USE_SSL": false
+	},
+	"recaptcha":{
+	#Apply at https://www.google.com/recaptcha/admin, V2
+	    "RECAPTCHA_PUBLIC_KEY":"key-wXv5P7101gC",
+	    "RECAPTCHA_PRIVATE_KEY":"key-zkklxfw3HkIcdyk"
 	}
 }
 
