--- a/config.json.example
+++ b/config.json.example
@@ -8,16 +8,9 @@
 	},
 	"website":{
 		"title":"Website Title",
+		"FullName":"FullName",
 		"keywords":"Keywords for SEO",
 		"key":"Something Random here"
-	},
-	"email":{
-	    "MAIL_SERVER":"smtp.office365.com",
-	    "MAIL_PORT":"587",
-	    "MAIL_USERNAME":"example@hotmail.com",
-	    "MAIL_PASSWORD":"password",
-	    "MAIL_USE_TLS": true,
-	    "MAIL_USE_SSL": false
 	},
 	"recaptcha":{
 	# Apply at https://www.google.com/recaptcha/admin, V2
